Update all image sources to a correct file

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <div class="profile_name">
           Mouad Ghouti
           <div class="contact_info">
-            <img src="html_finalprojimages/envelope.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
+            <img src="html_images/envelope.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
           mghouti@jaymail.com
         </div>
         <div style="clear:both;"></div>
         <div class="contact_info">
-          <img src="html_finalprojimages/phone.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
+          <img src="html_images/phone.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
           +13456764598
 
         </div>
@@ -60,7 +60,7 @@
 
       <div class="all_skills">
         <div class="skill">
-          <img src="html_finalprojimages/html5.png"/>
+          <img src="html_images/html5.png"/>
           <h6>HTML</h6>
           <p>1 month experience</p>
         </div>  
@@ -72,7 +72,7 @@
         </div>  
         
         <div class="skill">
-          <img src="html_finalprojimages/js.jpeg"/>
+          <img src="html_images/js.jpeg"/>
           <h6>JavaScript</h6>
           <p>1 month experience</p>
         </div>  
@@ -179,7 +179,7 @@
     </div>
 
     <div class="popup" id="popup" class="flex_center">
-      <img src="html_finalprojimages/checkmark--outline.svg"/>
+      <img src="html_images/checkmark--outline.svg"/>
       <h3>Thanks for leaving a recommendation!</h3>
       <button onclick="showPopup(false)">Ok</button>
     </div>
